--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -26,6 +26,7 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+  implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
   compile group: 'org.hsqldb', name: 'hsqldb'
   compile group: 'org.flywaydb', name: 'flyway-core'
   compile group: 'com.rometools', name: 'rome', version: romeToolsVersion
