--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -21,6 +21,7 @@ def commonsLang3Version = '3.8.1'
 def commonsIoVersion = '2.6'
 def commonsTextVersion = '1.6'
 def htmlSanitizerVersion = '20190610.1'
+def awaitilityVersion = '4.0.3'
 
 dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -42,6 +43,7 @@ dependencies {
   testImplementation('org.junit.vintage:junit-vintage-engine') {
     exclude group: 'org.hamcrest', module: 'hamcrest-core'
   }
+  testImplementation "org.awaitility:awaitility:${awaitilityVersion}"
 }
 
 spotbugs {
