chore: update eslint 7.12.1 => 7.22.0 => eslint-plugin-jest 24.1.0 => 24.3.2, eslint-plugin-jest-dom 3.2.4 => 3.6.5, eslint-plugin-react 7.21.5 => 7.22.0, eslint-plugin-testing-library 3.9.2 => 3.10.1, eslint-plugin-unicorn 23.0.0 => 28.0.2, lockfile-lint 4.3.7 => 4.6.2

--- a/myreader-frontend/.eslintrc.json
+++ b/myreader-frontend/.eslintrc.json
@@ -53,16 +53,17 @@
     "unicorn/prevent-abbreviations": "off",
     "unicorn/catch-error-name": "warn",
     "unicorn/filename-case": "off",
-    "unicorn/prefer-query-selector": "error",
-    "unicorn/import-index": "error",
-    "unicorn/prefer-includes": "warn",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "error",
     "unicorn/no-null":  "off",
-    "unicorn/no-fn-reference-in-iterator": "warn",
-    "unicorn/no-reduce": "off",
     "jest-dom/prefer-focus": "warn",
     "unicorn/consistent-function-scoping": "warn",
-    "unicorn/explicit-length-check": "warn"
+    "unicorn/explicit-length-check": "warn",
+    "unicorn/no-array-callback-reference": "warn",
+    "unicorn/no-array-reduce": "warn",
+    "unicorn/no-lonely-if": "warn",
+    "unicorn/prefer-spread": "warn",
+    "jest-dom/prefer-to-have-class": "warn",
+    "unicorn/no-array-for-each": "warn"
   }
 }
