--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-hotkeys-hook": "3.2.1",
+    "react-intersection-observer": "8.31.0",
     "react-router": "5.2.0",
     "react-router-dom": "5.2.0"
   },
