--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-jest-dom": "3.6.5",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-react-hooks": "4.2.0",
+    "eslint-plugin-sonarjs": "0.6.0",
     "eslint-plugin-testing-library": "3.10.1",
     "eslint-plugin-unicorn": "28.0.2",
     "html-webpack-plugin": "5.3.1",
