--- a/myreader-frontend/.babelrc
+++ b/myreader-frontend/.babelrc
@@ -13,7 +13,12 @@
         }
       }
     ],
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ],
   "plugins": [
     "@babel/plugin-proposal-class-properties"
