--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -2,7 +2,7 @@ plugins {
   id "jacoco"
   id "org.springframework.boot" version "2.6.1"
   id "org.owasp.dependencycheck" version "5.3.2.1"
-  id "com.github.psxpaul.execfork" version "0.1.13"
+  id "com.github.psxpaul.execfork" version "0.1.15"
   id "com.github.spotbugs" version "4.4.4"
 }
 
@@ -29,12 +29,12 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
   implementation 'org.springframework:spring-aspects'
-  compile group: 'org.hsqldb', name: 'hsqldb'
-  compile group: 'org.flywaydb', name: 'flyway-core'
+  implementation 'org.hsqldb:hsqldb'
+  implementation 'org.flywaydb:flyway-core'
   implementation "com.rometools:rome:${romeToolsVersion}"
   implementation "com.rometools:rome-modules:${romeToolsVersion}"
-  compile group: 'org.apache.commons', name: 'commons-lang3', version: commonsLang3Version
-  compile group: 'commons-io', name: 'commons-io', version: commonsIoVersion
+  implementation "org.apache.commons:commons-lang3:${commonsLang3Version}"
+  implementation "commons-io:commons-io:${commonsIoVersion}"
   implementation "org.apache.commons:commons-text:${commonsTextVersion}"
   implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
   implementation "org.apache.httpcomponents:httpclient"
