--- a/myreader-frontend/.eslintrc.json
+++ b/myreader-frontend/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "env": {
     "browser": true,
     "es6": true,
@@ -10,7 +10,6 @@
     "plugin:react/recommended",
     "plugin:unicorn/recommended",
     "plugin:jest-dom/recommended",
-    "plugin:testing-library/recommended",
     "plugin:sonarjs/recommended"
   ],
   "parserOptions": {
@@ -28,7 +27,8 @@
   "plugins": [
     "jest",
     "react-hooks",
-    "sonarjs"
+    "sonarjs",
+    "testing-library"
   ],
   "rules": {
     "indent": [
@@ -72,6 +72,7 @@
     "sonarjs/no-collapsible-if": "warn",
     "sonarjs/no-identical-functions": "warn",
     "react/jsx-uses-react": "off",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "unicorn/prefer-object-from-entries": "warn"
   }
 }
