--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -28,26 +28,26 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
+    "@babel/eslint-parser": "7.16.3",
     "@babel/plugin-proposal-class-properties": "7.13.0",
     "@babel/plugin-transform-react-jsx": "7.13.12",
     "@babel/preset-env": "7.13.10",
     "@babel/preset-react": "7.12.13",
     "@testing-library/jest-dom": "5.16.0",
     "@testing-library/react": "12.1.2",
-    "babel-eslint": "10.1.0",
     "babel-jest": "27.4.2",
     "babel-loader": "8.2.2",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "css-loader": "5.1.3",
     "cssnano": "4.1.10",
-    "eslint": "7.22.0",
-    "eslint-plugin-jest": "24.3.2",
-    "eslint-plugin-jest-dom": "3.6.5",
-    "eslint-plugin-react": "7.22.0",
-    "eslint-plugin-react-hooks": "4.2.0",
-    "eslint-plugin-sonarjs": "0.6.0",
-    "eslint-plugin-testing-library": "3.10.1",
-    "eslint-plugin-unicorn": "28.0.2",
+    "eslint": "8.3.0",
+    "eslint-plugin-jest": "25.3.0",
+    "eslint-plugin-jest-dom": "3.9.2",
+    "eslint-plugin-react": "7.27.1",
+    "eslint-plugin-react-hooks": "4.3.0",
+    "eslint-plugin-sonarjs": "0.11.0",
+    "eslint-plugin-testing-library": "5.0.1",
+    "eslint-plugin-unicorn": "39.0.0",
     "html-webpack-plugin": "5.3.1",
     "jest": "27.4.3",
     "jest-sonar-reporter": "2.0.0",
