chore: Update babel-loader 8.2.2 => 8.2.3, css-loader 5.1.3 => 6.5.1, html-webpack-plugin 5.3.1 => 5.5.0, mini-css-extract-plugin 1.3.9 => 2.4.5, terser-webpack-plugin 5.1.1 => 5.2.5, webpack 5.26.3 => 5.64.4, webpack-bundle-analyzer 4.4.0 => 4.5.0 => webpack-cli 4.5.0 => 4.9.1, webpack-dev-server 3.11.2 => 4.6.0, workbox-webpack-plugin 6.1.2 => 6.4.2, replace optimize-css-assets-webpack-plugin with mini-css-extract-plugin, remove cssnano

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -3,10 +3,8 @@
   "description": "Myreader frontend package",
   "scripts": {
     "build": "export NODE_ENV=production && webpack --bail --progress --profile",
-    "server": "export NODE_ENV=development && webpack serve  --history-api-fallback --inline --progress",
     "test": "export NODE_ENV=test && jest --coverage --ci --silent",
-    "test-watch": "export NODE_ENV=test && jest --watch --verbose false",
-    "start": "npm run server",
+    "start": "export NODE_ENV=development && webpack serve  --history-api-fallback --progress",
     "report": "export NODE_ENV=production && webpack --bail --progress --profile && webpack-bundle-analyzer dist/stats.json",
     "lint": "npm run lint:js-report && npm run lint:lockfile",
     "lint:js-report": "eslint -f json -o build/reports/eslint.json src/app/js",
@@ -36,10 +34,10 @@
     "@testing-library/jest-dom": "5.16.0",
     "@testing-library/react": "12.1.2",
     "babel-jest": "27.4.2",
-    "babel-loader": "8.2.2",
+    "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
-    "css-loader": "5.1.3",
-    "cssnano": "4.1.10",
+    "css-loader": "6.5.1",
+    "css-minimizer-webpack-plugin": "3.2.0",
     "eslint": "8.3.0",
     "eslint-plugin-jest": "25.3.0",
     "eslint-plugin-jest-dom": "3.9.2",
@@ -48,23 +46,22 @@
     "eslint-plugin-sonarjs": "0.11.0",
     "eslint-plugin-testing-library": "5.0.1",
     "eslint-plugin-unicorn": "39.0.0",
-    "html-webpack-plugin": "5.3.1",
+    "html-webpack-plugin": "5.5.0",
     "jest": "27.4.3",
     "jest-sonar-reporter": "2.0.0",
     "lockfile-lint": "4.6.2",
     "lodash.isequal": "4.5.0",
-    "mini-css-extract-plugin": "1.3.9",
-    "optimize-css-assets-webpack-plugin": "5.0.4",
+    "mini-css-extract-plugin": "2.4.5",
     "raw-loader": "4.0.2",
     "register-service-worker": "1.7.2",
     "svg-url-loader": "7.1.1",
-    "terser-webpack-plugin": "5.1.1",
-    "webpack": "5.26.3",
-    "webpack-bundle-analyzer": "4.4.0",
-    "webpack-cli": "4.5.0",
-    "webpack-dev-server": "3.11.2",
+    "terser-webpack-plugin": "5.2.5",
+    "webpack": "5.64.4",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-cli": "4.9.1",
+    "webpack-dev-server": "4.6.0",
     "webpack-pwa-manifest": "4.3.0",
-    "workbox-webpack-plugin": "6.1.2"
+    "workbox-webpack-plugin": "6.4.2"
   },
   "directories": {
     "test": "test"
