--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -20,9 +20,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hotkeys-hook": "3.4.4",
-    "react-intersection-observer": "8.32.5",
-    "react-router": "5.2.0",
-    "react-router-dom": "5.2.0"
+    "react-intersection-observer": "8.32.5"
   },
   "devDependencies": {
     "@babel/core": "7.16.0",
