refactor: remove service worker and webapp manifest

--- a/myreader-backend/src/main/resources/application.properties
+++ b/myreader-backend/src/main/resources/application.properties
@@ -24,6 +24,9 @@ spring.jackson.deserialization.FAIL_ON_UNKNOWN_PROPERTIES=false
 
 spring.task.scheduling.pool.size=10
 
+spring.web.resources.cache.cachecontrol.max-age=365d
+spring.web.resources.cache.cachecontrol.cache-public=true
+
 management.endpoints.web.base-path=/
 management.server.add-application-context-header=false
 
