--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -31,6 +31,7 @@
     "babel-jest": "27.4.5",
     "babel-loader": "8.2.3",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
+    "copy-webpack-plugin": "10.2.0",
     "css-loader": "6.5.1",
     "css-minimizer-webpack-plugin": "3.3.1",
     "eslint": "8.5.0",
@@ -52,9 +53,7 @@
     "webpack": "5.65.0",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-cli": "4.9.1",
-    "webpack-dev-server": "4.7.1",
-    "webpack-pwa-manifest": "4.3.0",
-    "workbox-webpack-plugin": "6.4.2"
+    "webpack-dev-server": "4.7.1"
   },
   "directories": {
     "test": "test"
