chore: update @testing-library/jest-dom 5.16.1 => 5.16.4, babel-jest 27.4.5 => 28.1.1, jest 27.4.5 => 28.1.1

--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -24,9 +24,9 @@
     "@babel/eslint-parser": "7.18.2",
     "@babel/preset-env": "7.18.2",
     "@babel/preset-react": "7.16.5",
-    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/jest-dom": "5.16.4",
     "@testing-library/react": "12.1.2",
-    "babel-jest": "27.4.5",
+    "babel-jest": "28.1.1",
     "babel-loader": "8.2.5",
     "babel-plugin-transform-react-remove-prop-types": "0.4.24",
     "copy-webpack-plugin": "11.0.0",
@@ -39,7 +39,8 @@
     "eslint-plugin-react-hooks": "4.5.0",
     "eslint-plugin-testing-library": "5.5.1",
     "html-webpack-plugin": "5.5.0",
-    "jest": "27.4.5",
+    "jest": "28.1.1",
+    "jest-environment-jsdom": "28.1.1",
     "lockfile-lint": "4.6.2",
     "lodash.isequal": "4.5.0",
     "mini-css-extract-plugin": "2.6.0",
