--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -4,6 +4,7 @@ plugins {
   id "org.owasp.dependencycheck" version "5.3.2.1"
   id "com.github.psxpaul.execfork" version "0.1.15"
   id "com.github.spotbugs" version "4.4.4"
+  id "com.github.ben-manes.versions" version "0.42.0"
 }
 
 apply plugin: 'java'
