chore: upgrade Gradle wrapper 7.3.1 => 7.5.1, com.github.spotbugs 4.4.4 => 4.8.0

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,10 @@
+pluginManagement {
+  repositories {
+    maven { url 'https://repo.spring.io/milestone' }
+    gradlePluginPortal()
+  }
+}
+
 rootProject.name = 'myreader'
 
 include 'myreader-backend', 'myreader-frontend'
