--- a/myreader-backend/build.gradle
+++ b/myreader-backend/build.gradle
@@ -1,6 +1,7 @@
 plugins {
   id "jacoco"
-  id "org.springframework.boot" version "2.7.4"
+  id "org.springframework.boot" version "3.0.0"
+  id "io.spring.dependency-management" version "1.1.0"
   id "org.owasp.dependencycheck" version "5.3.2.1"
   id "com.github.psxpaul.execfork" version "0.1.15"
   id "com.github.spotbugs" version "4.8.0"
@@ -8,7 +9,6 @@ plugins {
 }
 
 apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 apply plugin: 'pmd'
 apply plugin: 'project-report'
 
@@ -16,7 +16,7 @@ repositories {
   mavenCentral()
 }
 
-def javaLangVersion = JavaVersion.VERSION_11
+def javaLangVersion = JavaVersion.VERSION_17
 def romeToolsVersion = '1.18.0'
 def commonsIoVersion = '2.11.0'
 def commonsTextVersion = '1.10.0'
@@ -35,7 +35,7 @@ dependencies {
   implementation "commons-io:commons-io:${commonsIoVersion}"
   implementation "org.apache.commons:commons-text:${commonsTextVersion}"
   implementation "com.googlecode.owasp-java-html-sanitizer:owasp-java-html-sanitizer:${htmlSanitizerVersion}"
-  implementation "org.apache.httpcomponents:httpclient"
+  implementation "org.apache.httpcomponents.client5:httpclient5"
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
   testImplementation 'org.springframework.security:spring-security-test'
