chore: switch to Maven build system

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,13 @@
-build
-logs
-tmp
-node**
 .idea
-myreader.iml
-
-.gradle
-data
-myreader-backend/data
-myreader-backend/out
-myreader-frontend/.gradle
+*.iws
+*.iml
+*.ipr
+target/
+!.mvn/wrapper/maven-wrapper.jar
+!**/src/main/**/target/
+!**/src/test/**/target/
+.vscode/
+node_modules/
+node/
+data/
+out/
