--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -13,9 +13,8 @@
     "audit:high": "npm audit --audit-level=high"
   },
   "dependencies": {
+    "preact": "10.18.1",
     "prop-types": "15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "react-hotkeys-hook": "3.4.7",
     "react-intersection-observer": "9.4.0"
   },
