--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "preact": "10.18.1",
-    "react-hotkeys-hook": "3.4.7",
-    "react-intersection-observer": "9.4.0"
+    "react-hotkeys-hook": "3.4.7"
   },
   "devDependencies": {
     "@babel/core": "7.19.3",
