--- a/myreader-frontend/package.json
+++ b/myreader-frontend/package.json
@@ -14,7 +14,7 @@
   },
   "devDependencies": {
     "@babel/core": "7.19.3",
-    "@babel/preset-env": "7.19.3",
+    "@babel/plugin-transform-modules-commonjs": "7.23.3",
     "@babel/preset-react": "7.18.6",
     "@testing-library/jest-dom": "5.16.5",
     "@testing-library/react": "13.4.0",
